# humanoid-robot-system-stack

./: CMakeLists.txt  README.md  task.md
docs/: implementation_plan.md  realism_gap.md
humanoid_system/: main.cpp
humanoid_system/common/: types.hpp
humanoid_system/estimation/: contact_estimator.cpp  contact_estimator.hpp  eskf_whole_body.cpp  eskf_whole_body.hpp  imu_propagation.cpp  imu_propagation.hpp  kinematics_pinocchio.cpp  kinematics_pinocchio.hpp
humanoid_system/models/: simple_humanoid_6dof.urdf
humanoid_system/models/unitree_g1_12dof/: README.md  g1_12dof.urdf
humanoid_system/planning/: constraint_generator.cpp  constraint_generator.hpp  cost_map.cpp  cost_map.hpp
humanoid_system/robot_model/: robot_model_config.cpp  robot_model_config.hpp
humanoid_system/sensors/camera/: README.md
humanoid_system/sensors/encoder/: README.md
humanoid_system/sensors/imu/: README.md
humanoid_system/simulation/: humanoid_sim.cpp  humanoid_sim.hpp  scenario_generator.cpp  scenario_generator.hpp  sensor_sim.cpp  sensor_sim.hpp
humanoid_system/system/: data_bus.cpp  data_bus.hpp  real_time_loop.cpp  real_time_loop.hpp  sensor_buffer.cpp  sensor_buffer.hpp  state_history_buffer.cpp  state_history_buffer.hpp
humanoid_system/visualization/: plot_state.py
humanoid_system/world_model/: object_tracker.cpp  object_tracker.hpp  occupancy_grid.cpp  occupancy_grid.hpp  semantic_map.cpp  semantic_map.hpp
